package version managed from earlier project

--- a/package.json
+++ b/package.json
@@ -1,21 +1,54 @@
 {
-  "name": "structured-handwritten-data-extraction-frontend",
-  "version": "0.1.0",
+"name": "structured-handwritten-data-extraction-frontend",  
+"version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@idui/react-popover": "^3.1.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "firebase": "^9.9.2",
+    "formik": "^2.2.9",
+    "moment": "^2.29.4",
+    "notistack": "^2.0.8",
+    "react": "^18.2.0",
+    "react-color": "^2.19.3",
+    "react-data-grid": "^7.0.0-beta.26",
+    "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.8",
+    "react-dropzone": "^14.2.2",
+    "react-ga": "^3.3.1",
+    "react-google-button": "^0.7.2",
+    "react-image-gallery": "^1.2.11",
+    "react-image-magnify": "^2.7.4",
+    "react-json-view": "^1.21.3",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-magnifier": "^3.0.4",
+    "react-modal-image": "^2.6.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-redux": "^8.0.5",
+    "react-resize-detector": "^7.1.2",
+    "react-responsive-modal": "^6.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-toastify": "^9.1.1",
+    "react-zoom-pan-pinch": "^2.6.0",
+    "redux": "^4.2.0",
+    "sass": "^1.57.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,scss}\""
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +67,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4"
   }
 }
