--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -19,10 +19,28 @@ jobs:
           username: ${{ secrets.AZURE_VM_USERNAME }}
           key: ${{ secrets.AZURE_VM_SSH_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
-            docker stop ${{ secrets.DOCKERHUB_USERNAME }}/frontend || true
-            docker rm ${{ secrets.DOCKERHUB_USERNAME }}/frontend || true
-            docker run -d --name ${{ secrets.DOCKERHUB_USERNAME }}/frontend -p 80:80 \
-              -e REACT_APP_BACKEND_URL=${{ secrets.DEV_BACKEND_URL }} \
-              ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
+            # Define image name for clarity
+            IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest"
+            
+            # Pull the latest image
+            echo "Pulling latest image: $IMAGE_NAME"
+            docker pull $IMAGE_NAME
+            
+            # Stop and remove existing container
+            echo "Stopping and removing existing container"
+            docker stop frontend || true
+            docker rm frontend || true
+            
+            # Run new container
+            echo "Starting new container"
+            docker run -d --name frontend -p 80:80 \
+              -e REACT_APP_BACKEND_URL="${{ secrets.DEV_BACKEND_URL }}" \
+              $IMAGE_NAME
+            
+            # Verify container is running
+            echo "Verifying container status"
+            docker ps | grep frontend
+            
+            # Clean up
+            echo "Cleaning up unused resources"
             docker system prune -af
